--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "mcp-client"
-version = "0.1.0"
+version = "0.2.0"
 description = "Python client for Unity MCP server"
 readme = "README.md"
 authors = [{ name = "Luiz Hemerly", email = "lechemerly@gmail.com" }]
@@ -13,5 +13,5 @@ dependencies = ["requests"]
 requires-python = ">=3.7"
 
 [project.urls]
-Homepage = "https://github.com/lhemerly/mcp-client"
-Repository = "https://github.com/lhemerly/mcp-client"
+Homepage = "https://github.com/lhemerly/UnityMCP"
+Repository = "https://github.com/lhemerly/UnityMCP"
